fix(sonar): harden scenario path and clear backend service issues
Scenario files are checked against a file-name whitelist and a
normalised path under scenarios/ at the point of reading. The dump
import now runs as one JDBC batch and one sequence resync statement.

Co-Authored-By: Claude <noreply@anthropic.com>
Signed-off-by: Sylvain <git@sylvain.dev>